# qpace

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .qpace.json  BUILD.bazed  Cargo.toml  DOCS.md  Dockerfile  README copy.md  README.md  deploy.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.bat  test.bat  tsconfig.json  xd.md  xd.pine  xd.py
.github/: ci copy.yaml  (+1 more)
bindings/python/: Cargo.toml  build.bat
bindings/python/src/: lib.rs  py_backtesting.rs  py_data_provider.rs  py_strategy.rs  pyo3_utils.rs
core/: .gitignore  BUILD.bazed  Cargo.toml  __init__.py  backtest.rs  backtest_js.rs  backtest_node.rs  backtest_py.rs  backtest_test.rs  backtest_wasm.rs  build.rs  ctx.rs  ctx_js.rs  ctx_node.rs  ctx_py.rs  ctx_wasm.rs  legacy.rs  lib.rs  main.rs  metrics.rs  metrics_node.rs  metrics_py.rs  metrics_wasm.rs  ohlcv.rs  ohlcv_js.rs  ohlcv_node.rs  ohlcv_py.rs  ohlcv_wasm.rs  old.rs  orderbook.rs  orderbook_node.rs  orderbook_py.rs  orderbook_wasm.rs  plot.rs  plot_py.rs  pyi.rs  pyproject.toml  qpace_core.d.ts  qpace_core.pyi  rs_utils.rs  (+25 more)
core/fixtures/backtest/: tv_entry_close_duplicates.json  tv_entry_only_duplicates.pine  tv_equity_pct.csv  tv_order_contracts.pine
lib/content/: .qpace.json  .rustfmt.toml  BUILD.bazed  Cargo.toml  README.md  __init__.py  lib.rs  pyproject.toml  runtime.rs  ta.pine  ta.py
pace/: Cargo.toml
pace/src/: lib.rs
pace/src/common/: fixnan.rs  float_series.rs  incremental_cache.rs  mod.rs  src.rs  timeframe_adapter.rs
pace/src/common/tests/: fixnan_test.rs  float_series_test.rs  mod.rs
pace/src/content/: aroon.rs  awesome_oscillator.rs  balance_of_power.rs  bollinger_bands_pb.rs  bollinger_bands_width.rs  chaikin_money_flow.rs  chande_kroll_stop.rs  chande_momentum_oscillator.rs  choppiness_index.rs  commodity_channel_index.rs  connors_relative_strength_index.rs  coppock_curve.rs  directional_movement_index.rs  donchian_channels.rs  macd.rs  mod.rs  price_oscillator.rs  relative_strength_index.rs  relative_vigor_index.rs  relative_volatility_index.rs  stoch_relative_strength_index.rs  ultimate_oscillator.rs  volume_oscillator.rs  vortex.rs  williams_percent_range.rs  zigzag.rs  zigzag_debug.pine  zigzag_original.pine
pace/src/content/tests/: aroon_test.rs  awesome_oscillator_test.rs  balance_of_power_test.rs  bollinger_bands_pb_test.rs  bollinger_bands_width_test.rs  chaikin_money_flow_test.rs  chande_kroll_stop_test.rs  chande_momentum_oscillator_test.rs  choppiness_index_test.rs  commodity_channel_index_test.rs  connors_relative_strength_index_test.rs  coppock_curve_test.rs  directional_movement_index_test.rs  donchian_channels_test.rs  macd_test.rs  mod.rs  price_oscillator_test.rs  relative_strength_index_test.rs  relative_vigor_index_test.rs  relative_volatility_index_test.rs  stoch_relative_strength_index_test.rs  ultimate_oscillator_test.rs  volume_oscillator_test.rs  vortex_test.rs  williams_percent_range_test.rs  zigzag_test.rs
pace/src/core/: asset.rs  context.rs  data_provider.rs  features.rs  in_memory_data_provider.rs  incremental.rs  mod.rs  style.rs  timeframe.rs  trend.rs
pace/src/pinescript/: common.rs  float.rs  mod.rs  pinescript_exporter.rs
pace/src/pinescript/tests/: float_test.rs  mod.rs
pace/src/polars/: dataframe.rs  in_memory_data_provider.rs  io.rs  mod.rs  series.rs
pace/src/statistics/: common.rs  math.rs  mean.rs  mod.rs  normalization.rs  stdev.rs  var.rs  welfords_stdev.rs  welfords_var.rs
pace/src/statistics/tests/: mean_test.rs  mod.rs  normalization_test.rs  welfords_stdev_test.rs  welfords_var_test.rs
pace/src/strategy/: mod.rs  optimization.rs  strategy.rs  strategy_runner.rs  trade.rs  utils.rs
pace/src/strategy/metrics/: cobra_metrics.rs  common.rs  equity_metrics.rs  mod.rs  returns.rs  tradingview_metrics.rs
pace/src/strategy/metrics/tests/: mod.rs  strategy_metrics_test.rs
pace/src/strategy/tests/: mod.rs  strategy_test.rs
pace/src/strategy_refactor/: README.md  common.rs  equity_pct_signal_adapter.rs  mod.rs  strategy.rs  trade.rs  utils.rs
pace/src/strategy_refactor/tests/: 0.pine  a.pine  equity_pct_signal_adapter_test.rs  mod.rs  strategy_test.rs  xd.pine
pace/src/ta/: acc_dist.rs  average_true_range.rs  bars.rs  bars_since.rs  change.rs  commodity_channel_index.rs  cross.rs  cross_over.rs  cross_over_threshold.rs  cross_threshold.rs  cross_under.rs  cross_under_threshold.rs  cum.rs  dev.rs  exponential_moving_average.rs  exponential_moving_average_2.rs  highest.rs  highest_bars.rs  hull_moving_average.rs  linearly_weighted_moving_average.rs  linreg.rs  lowest.rs  lowest_bars.rs  mod.rs  moving_average.rs  percent_rank.rs  prev_change.rs  price_volume_trend.rs  rate_of_change.rs  relative_strength_index.rs  running_moving_average.rs  simple_moving_average.rs  stdev.rs  stoch.rs  sum.rs  symmetrically_weighted_moving_average.rs  true_range.rs  weighted_moving_average.rs
pace/src/ta/tests/: acc_dist_test.rs  average_true_range_test.rs  bars_since_test.rs  change_test.rs  commodity_channel_index_test.rs  cross_over_test.rs  cross_over_threshold_test.rs  cross_test.rs  cross_threshold_test.rs  cross_under_test.rs  cross_under_threshold_test.rs  cum_test.rs  dev_test.rs  exponential_moving_average_test.rs  highest_bars_test.rs  highest_test.rs  hull_moving_average_test.rs  linearly_weighted_moving_average_test.rs  linreg_test.rs  lowest_bars_test.rs  lowest_test.rs  mod.rs  nan_test.rs  percent_rank_test.rs  price_volume_trend.rs  rate_of_change_test.rs  relative_strength_index_test.rs  running_moving_average_test.rs  simple_moving_average_test.rs  stdev_test.rs  stoch_test.rs  sum_test.rs  symmetrically_weighted_moving_average_test.rs  true_range_test.rs  weighted_moving_average_test.rs
pace/src/testing/: array_snapshot.rs  fixture.rs  incremental.rs  mod.rs  pace.rs
pace/src/tests/integration/: a_test.rs  mod.rs
pace/src/utils/: array.rs  float.rs  fs.rs  math.rs  mod.rs  polars.rs  string.rs  time.rs
pace/src/utils/tests/: math_test.rs  mod.rs
playground/: BUILD.bazed  Cargo.toml  btc.csv  lib.rs  main.py  main.ts
(+472 files in other folders)
