[workspace]
resolver = "2"
members = ["core", "lib/content", "playground"]

[workspace.package]
version = "0.0.1"
edition = "2021"

description = "qpace"
repository = "https://github.com/nersent/qpace"
keywords = ["pyo3"]
license = ""
readme = "README.md"

[profile.release]
# lto = "fat"
# codegen-units = 1
panic = "abort"

[profile.release_fat]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
chrono = { version = "0.4.39", features = ["serde", "wasmbind"] }
cfg-if = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
polars = { version = "0.32", features = ["parquet", "lazy"] }
itertools = "0.12"
thiserror = "1.0.64"
num-derive = "0.4"
num-traits = "0.2"
num = "0.4"
colored = "2.0.0"
comfy-table = "7.1"
textplots = "0.8"
