[package]
name = "qpace_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "qpace_core"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
version = "1.0.0"
edition = "2021"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "pyi"
path = "pyi.rs"

[features]
# default = []
default = ["polars"]
# default = ["bindings_wasm"]
# default = ["bindings_py", "bindings_wasm", "console_error_panic_hook"]
bindings_py = [
  "pyo3",
  "pyo3-ffi",
  "pyo3-stub-gen",
  "pyo3-stub-gen-derive",
  "env_logger",
  "comfy-table",
  "textplots",
]
bindings_wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]
# polars_utils = ["polars"]

[dependencies]
cfg-if = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { version = "0.3.77", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
pyo3 = { version = "0.23", optional = true, features = [
  "extension-module",
  "macros",
  "chrono",
] }
pyo3-ffi = { version = "0.23", optional = true }
pyo3-stub-gen = { version = "0.7", optional = true }
pyo3-stub-gen-derive = { version = "0.7", optional = true }
env_logger = { workspace = true, optional = true }
polars = { workspace = true, optional = true }
itertools = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true, optional = true }
textplots = { workspace = true, optional = true }

[build-dependencies]
pyo3-build-config = { version = "0.23" }
