[package]
name = "nersent_pace"
version = "0.6.22"
edition = "2021"
homepage = "https://nersent.com"
repository = "https://github.com/nersent/pace"
keywords = ["nersent", "technical", "analysis", "ta", "talib"]
documentation = "https://github.com/nersent/pace/docs/index.md"
description = "Technical Analysis library"
license-file = "../LICENSE"

[lib]
name = "nersent_pace"
crate-type = ["cdylib", "rlib"]

[dependencies]
# polars = { version = "0.30.0", features = ["parquet", "lazy"] }
# itertools = "0.10.5"
# similar-asserts = "1.4.2"
# similar = "2.2.1"
# colored = "2.0.0"
# chrono = "0.4.23"
# kdam = "0.3.0"
# mimalloc = { version = "0.1.34", default-features = true }
# rand = "0.8.5"
# prettytable-rs = "^0.10"
# textplots = "0.8"
# plotters = "0.3.4"
# ndarray = "0.15.6"
# num = "0.4"
# num-derive = "0.3"
# num-traits = "0.2"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
polars = { version = "0.32", features = ["parquet", "lazy"] }
itertools = "0.11"
similar-asserts = "1.4.2"
similar = "2.2.1"
colored = "2.0.0"
chrono = "0.4.23"
kdam = "0.3.0"
mimalloc = { version = "0.1.34", default-features = true }
rand = "0.8.5"
prettytable-rs = "^0.10"
textplots = "0.8"
plotters = "0.3.4"
ndarray = "0.15.6"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.2"
