[package]
name = "nersent_pace_py"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
name = "nersent_pace_py"
crate-type = ["cdylib", "rlib"]
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.23"
polars = { version = "0.30.0", features = ["parquet", "lazy"] }
kdam = "0.3.0"
pyo3 = { version = "0.19", features = ["extension-module", "macros"] }
mimalloc = { version = "0.1.34", default-features = false }
serde = "*"
serde_json = "*"
serde_derive = "*"
nersent_pace = { path = "../../pace" }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
