[package]
name = "qpace_content"
version = "0.0.1"
edition = "2021"

[lib]
name = "qpace_content"
crate-type = ["cdylib", "rlib"]
path = "lib.rs"
version = "0.0.1"
edition = "2021"

[dependencies]
polars = { workspace = true }
pyo3 = { version = "0.23", features = ["extension-module", "macros", "chrono"] }
pyo3-ffi = { version = "0.23" }
pyo3-stub-gen = { version = "0.7" }
pyo3-stub-gen-derive = { version = "0.7" }
qpace_core = { path = "../../core", features = ["bindings_py", "polars"] }

[build-dependencies]
pyo3-build-config = { version = "0.23" }
